<resources>
    <string name="app_name">LoadApp</string>
    <string name="glide">Glide</string>
    <string name="load_app">Load App</string>
    <string name="retrofit">Retrofit</string>
    <string name="downlaod">Download</string>
    <string name="main_banner">Main Banner</string>

    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_Glide">The Glide Project repository Download status</string>
    <string name="notification_description_Project">The Project 3 repository is Download status</string>
    <string name="notification_description_Retrofit">The Retrofit Project repository is Download status</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel">downloadChannel</string>
    <string name="notification_channel_id">channelId</string>


    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="selected_item">File Name :</string>
    <string name="status">Status :</string>
    <string name="ok">OK</string>
</resources>